Fixed background image. Image is shifted and fits on the page

--- a/src/components/Recruitment/Recruitment.css
+++ b/src/components/Recruitment/Recruitment.css
@@ -1,8 +1,15 @@
 .recruit {
     display: flex;
     flex-direction: column;
-    /* align-content: space-between; */
-    gap: 500px;
+    gap: 300px;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 650px;
+    background-size: cover;
+    background-position: center;
+    margin-bottom: -22px;
+    opacity: 90%;
+    filter: brightness(70%);
 }
 
 .buttonStyle {
